# media-pro

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_pool_object_health_state.py  0003_caiyun_drive_fields.py  0004_openlist_storage_managed.py
deploy/systemd/: README.md  media-pro.env.example  media-pro.service
poc/caiyun/: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
scripts/: validate_caiyun_source_copy.py  validate_openlist_stream.py  validate_rapid_copy.py  verify_mvp.py  verify_real_integration.py
src/gateway/: audit.py  catalog.py  catalog_sync.py  config.py  db.py  main.py  models.py  playback.py  playback_resolver.py  pool.py  real_integration.py  schemas.py  script_inputs.py  security.py  transfer.py  workers.py
tests/api/: test_admin_auth.py  test_admin_catalog_sync.py  test_admin_drive_probe.py  test_admin_drive_types.py  test_admin_drives.py  test_admin_drives_caiyun.py  test_admin_media_items.py  test_admin_overview.py  test_admin_persistence.py  test_admin_playback_records.py  test_admin_pool_objects.py  test_admin_session.py  test_admin_spa_serving.py  test_admin_stats.py  test_admin_stats_persistence.py  test_admin_transfer_jobs.py  test_admin_ui.py  test_admin_users.py  test_health.py  test_playback_api.py
tests/catalog/: test_catalog_service.py  test_catalog_sync_service.py
tests/config/: test_settings.py
tests/db/: test_models.py  (+1 more)
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
(+75 files in other folders)
