[project]
name = "gd-playback-gateway"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn>=0.30,<0.31",
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "httpx>=0.27,<0.28",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
