[project]
name = "gd-playback-gateway"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn>=0.30,<0.31",
  "pydantic>=2.8,<3",
  "httpx>=0.27,<0.28",
  "pydantic-settings>=2.3,<3",
  "sqlalchemy>=2.0.49",
  "alembic>=1.18.4",
  "cryptography>=48.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "httpx>=0.27,<0.28",
  "pytest-asyncio>=0.23,<0.24",
  "respx>=0.21,<0.22",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
